// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > modifications > copyFromScenario should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "method": "post",
    },
    "url": "/api/scenario/2/import/1",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > copyFromScenario should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "post",
      },
      "url": "/api/scenario/2/import/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > copyFromScenario should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "post",
      },
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Array [
        Object {
          "_id": "1234",
          "accessGroup": "accessGroupName",
          "bidirectional": false,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "nonce": "12345",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
          "variants": Array [
            true,
          ],
        },
      ],
      "type": "create modifications",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/scenarios/2",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > modifications > create should work 1`] = `[Function]`;

exports[`actions > modifications > create should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "bidirectional": true,
          "expanded": false,
          "name": "Add Trip Pattern",
          "scenarioId": "1",
          "segments": Array [],
          "showOnMap": true,
          "timetables": Array [],
          "type": "add-trip-pattern",
          "variants": Array [
            true,
          ],
        },
        "method": "post",
      },
      "url": "/api/modification",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > create should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "bidirectional": true,
          "expanded": false,
          "name": "Add Trip Pattern",
          "scenarioId": "1",
          "segments": Array [],
          "showOnMap": true,
          "timetables": Array [],
          "type": "add-trip-pattern",
          "variants": Array [
            true,
          ],
        },
        "method": "post",
      },
      "url": "/api/modification",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Object {
        "_id": "1234",
        "accessGroup": "accessGroupName",
        "bidirectional": false,
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "description": "Mock description",
        "entries": Array [],
        "feed": "1",
        "name": "Test Modification",
        "nonce": "12345",
        "routes": Array [
          "route1",
        ],
        "scenarioId": "1",
        "segments": Array [
          {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
        ],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "_id": "timetable-id",
            "dwellTime": 10,
            "endTime": 57600,
            "exactTimes": false,
            "friday": true,
            "headwaySecs": 900,
            "modificationId": "1234",
            "modificationName": "Test Modification",
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "phaseAtStop": "",
            "phaseFromStop": "",
            "phaseFromTimetable": "",
            "phaseSeconds": 300,
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
        "variants": Array [
          true,
        ],
      },
      "type": "create modification",
    },
    Object {
      "payload": "1234",
      "type": "set active modification",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/scenarios/1/modifications/1234",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > modifications > deleteModification should work 1`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete modification",
  },
  Array [
    Object {
      "payload": Object {
        "options": Object {
          "method": "delete",
        },
        "url": "/api/modification/1",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
  Object {
    "payload": Array [],
    "type": "clear references to modification",
  },
]
`;

exports[`actions > modifications > deleteModification should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/modification/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > getForScenario should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/scenario/1/modifications",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > getForScenario should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/scenario/1/modifications",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > getForScenario should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/scenario/1/modifications",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Array [
        Object {
          "_id": "1234",
          "accessGroup": "accessGroupName",
          "bidirectional": false,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "nonce": "12345",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
          "variants": Array [
            true,
          ],
        },
      ],
      "type": "set modifications",
    },
    Array [
      Object {
        "payload": Object {
          "options": Object {},
          "url": "/api/graphql?query=%0Aquery%20dataQuery(%24bundleId%3A%20String%2C%20%24routeIds%3A%20%5BString%5D)%20%7B%0A%20%20bundle%20(bundle_id%3A%20%5B%24bundleId%5D)%20%7B%0A%20%20%20%20feeds%20%7B%0A%20%20%20%20%20%20feed_id%2C%0A%20%20%20%20%20%20checksum%2C%0A%20%20%20%20%20%20routes%20%7B%0A%20%20%20%20%20%20%20%20route_id%0A%20%20%20%20%20%20%20%20route_short_name%0A%20%20%20%20%20%20%20%20route_long_name%0A%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20detailRoutes%3A%20routes(route_id%3A%20%24routeIds)%20%7B%0A%20%20%20%20%20%20%20%20route_id%0A%20%20%20%20%20%20%20%20route_short_name%0A%20%20%20%20%20%20%20%20route_long_name%0A%20%20%20%20%20%20%20%20patterns%20%7B%0A%20%20%20%20%20%20%20%20%20%20name%2C%0A%20%20%20%20%20%20%20%20%20%20pattern_id%2C%0A%20%20%20%20%20%20%20%20%20%20geometry%2C%0A%20%20%20%20%20%20%20%20%20%20trips%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20trip_id%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20trip_short_name%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20trip_headsign%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20start_time%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20direction_id%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20duration%0A%20%20%20%20%20%20%20%20%20%20%7D%2C%0A%20%20%20%20%20%20%20%20%20%20stops%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20stop_id%0A%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20stops%20%7B%0A%20%20%20%20%20%20%20%20stop_id%2C%0A%20%20%20%20%20%20%20%20stop_name%2C%0A%20%20%20%20%20%20%20%20stop_lat%2C%0A%20%20%20%20%20%20%20%20stop_lon%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%0A%20%20%7D%0A%7D%0A&variables=%7B%22bundleId%22%3A%221%22%2C%22routeIds%22%3A%5B%5D%7D",
        },
        "type": "increment outstanding fetches",
      },
      Promise {},
    ],
  ],
]
`;

exports[`actions > modifications > saveToServer should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "_id": "1234",
        "accessGroup": "accessGroupName",
        "bidirectional": false,
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "description": "Mock description",
        "entries": Array [],
        "feed": "1",
        "name": "Test Modification",
        "nonce": "12345",
        "routes": Array [
          "route1",
        ],
        "scenarioId": "1",
        "segments": Array [
          {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
        ],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "_id": "timetable-id",
            "dwellTime": 10,
            "endTime": 57600,
            "exactTimes": false,
            "friday": true,
            "headwaySecs": 900,
            "modificationId": "1234",
            "modificationName": "Test Modification",
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "phaseAtStop": "",
            "phaseFromStop": "",
            "phaseFromTimetable": "",
            "phaseSeconds": 300,
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
        "variants": Array [
          true,
        ],
      },
      "method": "put",
    },
    "url": "/api/modification/1234",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > saveToServer should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1234",
          "accessGroup": "accessGroupName",
          "bidirectional": false,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "nonce": "12345",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
          "variants": Array [
            true,
          ],
        },
        "method": "put",
      },
      "url": "/api/modification/1234",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > saveToServer should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1234",
          "accessGroup": "accessGroupName",
          "bidirectional": false,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "nonce": "12345",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
          "variants": Array [
            true,
          ],
        },
        "method": "put",
      },
      "url": "/api/modification/1234",
    },
    "type": "decrement outstanding fetches",
  },
  Object {
    "payload": "saved",
    "type": "set modification",
  },
]
`;

exports[`actions > modifications > set should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "_id": "1234",
        "accessGroup": "accessGroupName",
        "bidirectional": false,
        "createdAt": "2017-11-08T12:30:50.133Z",
        "createdBy": "person@gmail.com",
        "description": "Mock description",
        "entries": Array [],
        "feed": "1",
        "name": "Test Modification",
        "nonce": "12345",
        "routes": Array [
          "route1",
        ],
        "scenarioId": "1",
        "segments": Array [
          {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
        ],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "_id": "timetable-id",
            "dwellTime": 10,
            "endTime": 57600,
            "exactTimes": false,
            "friday": true,
            "headwaySecs": 900,
            "modificationId": "1234",
            "modificationName": "Test Modification",
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "phaseAtStop": "",
            "phaseFromStop": "",
            "phaseFromTimetable": "",
            "phaseSeconds": 300,
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "updatedAt": "2017-11-08T12:31:19.602Z",
        "updatedBy": "person@gmail.com",
        "variants": Array [
          true,
        ],
      },
      "method": "put",
    },
    "url": "/api/modification/1234",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > set should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1234",
          "accessGroup": "accessGroupName",
          "bidirectional": false,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "nonce": "12345",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
          "variants": Array [
            true,
          ],
        },
        "method": "put",
      },
      "url": "/api/modification/1234",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > set should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1234",
          "accessGroup": "accessGroupName",
          "bidirectional": false,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "description": "Mock description",
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "nonce": "12345",
          "routes": Array [
            "route1",
          ],
          "scenarioId": "1",
          "segments": Array [
            {
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "LineString",
    "coordinates": [
      [
        "-122.02460000",
        "36.97070000"
      ],
      [
        "-122.02790000",
        "37.04900000"
      ],
      [
        "-121.97990000",
        "37.22990000"
      ],
      [
        "-121.94450000",
        "37.32400000"
      ],
      [
        "-121.93600000",
        "37.35300000"
      ],
      [
        "-121.92400000",
        "37.36500000"
      ]
    ]
  }
},
          ],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "_id": "timetable-id",
              "dwellTime": 10,
              "endTime": 57600,
              "exactTimes": false,
              "friday": true,
              "headwaySecs": 900,
              "modificationId": "1234",
              "modificationName": "Test Modification",
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "phaseAtStop": "",
              "phaseFromStop": "",
              "phaseFromTimetable": "",
              "phaseSeconds": 300,
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
          "variants": Array [
            true,
          ],
        },
        "method": "put",
      },
      "url": "/api/modification/1234",
    },
    "type": "decrement outstanding fetches",
  },
  Object {
    "payload": "saved",
    "type": "set modification",
  },
]
`;

exports[`actions > modifications > setActive should work 1`] = `
Object {
  "type": "set active modification",
}
`;

exports[`actions > modifications > setLocally should work 1`] = `
Object {
  "type": "set modification",
}
`;
